--- a/code-pink.html
+++ b/code-pink.html
@@ -13,12 +13,12 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Код "Розовый"</h1>
 <div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
-<p><strong>Описание:</strong> [ДАННЫЕ УДАЛЕНЫ]</p>
+<p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
 
-<p><strong>Особые указания:</strong> [ДАННЫЕ УДАЛЕНЫ]</p>
+<p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высоквалифицированных оперативников</p>
 
-<p><strong>Назначенные МОГ:</strong> [ДАННЫЕ УДАЛЕНЫ]</p>
-
+<p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница").</p>
+<hr>
 <p>Равномерный стук в иллюминатор вертолёта крупных каплей дождя почти сводил с ума, но к нему можно привыкнуть. Отряд из семи бойцов включая командира, молча сидел на своих местах и каждый, смотря в пустоту, думал о чём-то своём. В комплексе, куда направлялся данный вертолёт, примерно 10 минут назад автоматической системой безопасности был отправлен сигнал тревоги, больше информации от комплекса не было, ни запросов, ни отчётов, ни докладов службы безопасности… ничего. У бойцов было скверное настроение, они летят в неизвестность, их задача зайти в комплекс и выяснить, что там произошло, зная специфику объектов поставленных на содержание в фонде, ситуация могла развиться самым непредсказуемым образом. Капитан решил подбодрить своих бойцов и воскликнул, пытаясь перекричать гул вертолёта: "А чо это мы такие грустные? Надеюсь, вы хорошо поужинали бойцы! Потому что завтракать мы будем в АДУ! Ха-ха-ха-ха."</p>
 
 <p>Отряд одновременно и монотонным голосом ответил: "Есть сэр, да сэр!", - Того требовала субординация, но у каждого было тайное желание врезать по этой наглой морде, с такими шутками далеко не уедешь.</p>
@@ -44,9 +44,10 @@
 <p>Обострились все его чувства. Случайный прохладный порыв сквозняка обдул его взмокшую шею, где-то вдалеке послышался очередной нечеловеческий вопль, который превратился, в отвратительное бульканье… Оперативник разрядил свою штурмовую винтовку и кинул её на пол, она ему больше не нужна, в тишине темного коридора раздался звонкий звук её удара об пол. У него участился пульс, он знал, что сейчас или никогда, выход один или он остановит эту тварь здесь и сейчас либо все было напрасно.</p>
 
 <p>Оперативник медленно расстегнул крепление на своём шлеме, снял и с глухим ударом бросил его на пол, шлем ему мешал, сужал обзор, а охотник должен далеко видеть свою добычу, щёлкнули крепления бронежилета, он сжимал его грудь, мешал дышать и двигаться, а ведь охотник должен, быть проворным, он так же был сброшен на пол, финальным своим резким движением оперативник стянул штаны, передёрнул затвор своего самого надежного ствола и проронив последние слова: "Ну… поехали…", - Он двинулся уверенной походкой во тьму, на звук тяжёлых шагов…</p>
+<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell
 <hr>
 <div style="text-align: center;">
-<p><span style="font-size:70%; font-weight: bolder;">Код "Розовый" | <a>[НАЗВАНИЕ] »</a></span></p></div>
+<p><span style="font-size:80%; font-weight: bolder;">Код "Розовый" | <a>Нелегкий труд</a> »</span></p></div>
 
 </div>
 </body>
