--- a/code-pink.html
+++ b/code-pink.html
@@ -15,7 +15,7 @@
 <div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
 <p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
 
-<p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высоквалифицированных оперативников</p>
+<p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
 <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница").</p>
 <hr>
