--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -2,9 +2,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
-  <link rel="stylesheet" href="code-pink.css">
+  <link rel="stylesheet" href="scp-939-s-ex.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
-  <title>Код "Розовый"</title>
+  <title>SCP-939-S-EX - Со множеством голосов, и не только...</title>
 </head>
 <html>
 <body>
@@ -39,7 +39,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell
 <hr>
 <div style="text-align: center;">
-<p><span style="font-size:80%; font-weight: bolder;">Код "Розовый" | <a>Нелегкий труд</a> »</span></p></div>
+<p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
 
 </div>
 </body>
