--- a/code-pink.html
+++ b/code-pink.html
@@ -47,7 +47,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell
 <hr>
 <div style="text-align: center;">
-<p><span style="font-size:80%; font-weight: bolder;">Код "Розовый" | <a>Нелегкий труд</a> »</span></p></div>
+<p><span style="font-size:80%; font-weight: bolder;">Код "Розовый" | <a href='/scp-939-s-ex'>SCP-939-S-EX</a> »</span></p></div>
 
 </div>
 </body>
