--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -15,7 +15,7 @@
 <!-- Баннер !-->
 <div class='apcs-container'>
   <div class='apcs-main-content'>
-    <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Уффф... Ох... Да...<br><strong>Куратор:</strong> Др. Хеллов</div>
+    <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Уффф... Ох... Да<br><strong>Куратор:</strong> Др. Хеллов</div>
     </div>
     <div class='apcs-hazards'>
       <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
@@ -26,9 +26,9 @@
     </div>
     <div class='apcs-class'><div style='line-height: 1em;'>K</div><div style='font-family: monospace;font-size: xx-small;line-height: 1em;'>gentle keter</div></div>
     <div class='apcs-info'>
-      <div class='apcs-info-activation'>Нестабильный</div>
-      <div class='apcs-info-risk'>Ȼ</div>
-      <div class='apcs-info-vedist'>Vedist IV</div>
+      <div class='apcs-info-activation'>Перманентный</div>
+      <div class='apcs-info-risk'>C3</div>
+      <div class='apcs-info-vedist'>Vedist V</div>
       <div class="apcs-info-number">SCP-939-S-EX</div>
     </div>
   </div>
@@ -36,13 +36,17 @@
 <!-- База !-->
 <p><strong>Объект №:</strong> 939-S-EX</p>
 <!-- раздел !-->
-<p><strong>Класс объекта:</strong> нежный кетер</p>
+<p><strong>Класс объекта:</strong> Нежный кетер</p>
+<!-- раздел !-->
+<p><strong>Класс нарушения:</strong> Кенэк</p>
+<!-- раздел !-->
+<p><strong>Класс риска:</strong> Угроза</p>
 <!-- раздел !-->
 <p><strong>Особые условния содержания:</strong></p>
 <!-- раздел !-->
 <p><strong>Описание:</strong> Особь SCP-939-S-EX – теплокровный разумный хищник, некоторые органы и системы которого атрофированы. Кожа SCP-939-S-EX хорошо пропускает влагу, красная. Средний рост особи SCP-939-S-EX, прямо стоящей на задних конечностях – +- 2,2 метра, а вес примерно – 250 кг, хотя от этой величины могут быть значительные отклонения. На каждой из четырёх конечностей имеется по четыре снабжённых когтем пальца, напротив которых расположен большой палец. Конечности покрыты щетинками, что весьма положительно влияет на способность SCP-939-S-EX к лазанию. Головы вытянутые, глаз или глазниц нет, мозгового черепа нет. Челюсти SCP-939-S-EX снабжены заострёнными зубами, которые тускло светятся красным. Строение челюстей и зубов похоже на таковое у хаулиодовых, зубы достигают шести сантиметров в длину. На внешней стороне челюстей расположены терморецепторные ямки. Иглы на спине данной особи меньше чем у остальных представителей и достигают 12 сантиметров в длину и, похоже, чувствительны к движению потоков воздуха и атмосферному давлению. Внешне строением своего тела особь походит на женщину в возрасте 25-30 лет, стройные ноги, крупные бёдра, овальные упругие ягодицы, тело не худое, но жилистое кое-где просматриваются крепкие мышцы, в районе груди расположены 2 крупных мешка с амнезиаком, внешне очень напоминают женскую грудь, репродуктивный орган внешне аналогичен женскому, амнезиак особь выпускает следующим образом: останавливается на месте, выпрямляется в полный рост, начинает сначала медленно и аккуратно массировать мешки, потом сила нажатия увеличивается и в какой-то момент резко сжимает их при этом особь запрокидывает свою голову и издаёт очень странный звук внешне напоминающий стон <span style='color: black;background: black;'>("Аххххххххх")</span>, амнезиак выходит со специфическим звуком из отверстий внешне напоминающие женские соски.</p>
 <!-- все !-->
-<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell
+<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство: PRINCE</strong>
 <hr>
 <div style="text-align: center;">
 <p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
