--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -18,11 +18,9 @@
     <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Уффф... Ох... Да<br><strong>Куратор:</strong> Др. Хеллов</div>
     </div>
     <div class='apcs-hazards'>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
-      <div class='apcs-hazard'><img src="https://i.ibb.co/x39zTd2/image.png" width='100%' alt="hazard" title='test' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/G0FGZk9/image.png" width='100%' alt="hazard" title='Cексуальная опасность' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/tQPYLMv/image.png" width='100%' alt="hazard" title='Хищник' border="0"></div>
+      <div class='apcs-hazard'><img src="https://i.ibb.co/8NCXDZJ/image.png" width='100%' alt="hazard" title='Мимикрия' border="0"></div>
     </div>
     <div class='apcs-class'><div style='line-height: 1em;'>K</div><div style='font-family: monospace;font-size: xx-small;line-height: 1em;'>gentle keter</div></div>
     <div class='apcs-info'>
@@ -46,7 +44,7 @@
 <!-- раздел !-->
 <p><strong>Описание:</strong> Особь SCP-939-S-EX – теплокровный разумный хищник, некоторые органы и системы которого атрофированы. Кожа SCP-939-S-EX хорошо пропускает влагу, красная. Средний рост особи SCP-939-S-EX, прямо стоящей на задних конечностях – +- 2,2 метра, а вес примерно – 250 кг, хотя от этой величины могут быть значительные отклонения. На каждой из четырёх конечностей имеется по четыре снабжённых когтем пальца, напротив которых расположен большой палец. Конечности покрыты щетинками, что весьма положительно влияет на способность SCP-939-S-EX к лазанию. Головы вытянутые, глаз или глазниц нет, мозгового черепа нет. Челюсти SCP-939-S-EX снабжены заострёнными зубами, которые тускло светятся красным. Строение челюстей и зубов похоже на таковое у хаулиодовых, зубы достигают шести сантиметров в длину. На внешней стороне челюстей расположены терморецепторные ямки. Иглы на спине данной особи меньше чем у остальных представителей и достигают 12 сантиметров в длину и, похоже, чувствительны к движению потоков воздуха и атмосферному давлению. Внешне строением своего тела особь походит на женщину в возрасте 25-30 лет, стройные ноги, крупные бёдра, овальные упругие ягодицы, тело не худое, но жилистое кое-где просматриваются крепкие мышцы, в районе груди расположены 2 крупных мешка с амнезиаком, внешне очень напоминают женскую грудь, репродуктивный орган внешне аналогичен женскому, амнезиак особь выпускает следующим образом: останавливается на месте, выпрямляется в полный рост, начинает сначала медленно и аккуратно массировать мешки, потом сила нажатия увеличивается и в какой-то момент резко сжимает их при этом особь запрокидывает свою голову и издаёт очень странный звук внешне напоминающий стон <span style='color: black;background: black;'>("Аххххххххх")</span>, амнезиак выходит со специфическим звуком из отверстий внешне напоминающие женские соски.</p>
 <!-- все !-->
-<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство: PRINCE</strong>
+<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство:</strong> PRINCE
 <hr>
 <div style="text-align: center;">
 <p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
