--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -15,7 +15,7 @@
 <!-- Баннер !-->
 <div class='apcs-container'>
   <div class='apcs-main-content'>
-    <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Уффф... Ох... Да<br><strong>Куратор:</strong> Др. Хеллов<br><strong>КС: Криокамера №2</strong></div>
+    <div class="apcs-header"><div class='apcs-txt'>SECRET</div><div class="apcs-text-lines"><strong>Специфика:</strong> Уффф... Ох... Да<br><strong>Куратор:</strong> Др. Хеллов<br><strong>КС:</strong> Криокамера №2</div>
     </div>
     <div class='apcs-hazards'>
       <div class='apcs-hazard'><img src="https://i.ibb.co/G0FGZk9/image.png" width='100%' alt="hazard" title='Cексуальная опасность' border="0"></div>
