--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -22,7 +22,7 @@
       <div class='apcs-hazard'><img src="https://i.ibb.co/tQPYLMv/image.png" width='100%' alt="hazard" title='Хищник' border="0"></div>
       <div class='apcs-hazard'><img src="https://i.ibb.co/8NCXDZJ/image.png" width='100%' alt="hazard" title='Мимикрия' border="0"></div>
     </div>
-    <div class='apcs-class'><div style='line-height: 1em;'>K</div><div style='font-family: monospace;font-size: xx-small;line-height: 1em;'>gentle keter</div></div>
+    <div class='apcs-class'><div style='line-height: 1em;'>K</div><div style='font-family: monospace;font-size: xx-small;line-height: 1em;'>horny keter</div></div>
     <div class='apcs-info'>
       <div class='apcs-info-activation'>Перманентный</div>
       <div class='apcs-info-risk'>C3</div>
