--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -34,7 +34,7 @@
 <!-- База !-->
 <p><strong>Объект №:</strong> 939-S-EX</p>
 <!-- раздел !-->
-<p><strong>Класс объекта:</strong> Нежный кетер</p>
+<p><strong>Класс объекта:</strong> <a href='/horny-keter'>Возбуждённый кетер</a></p>
 <!-- раздел !-->
 <p><strong>Класс нарушения:</strong> Кенэк</p>
 <!-- раздел !-->
