Sex Curious Projects

--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -9,7 +9,7 @@
 <html>
 <body>
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
+  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'></div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>SCP-939-S-EX - Со множеством голосов, и не только...</h1>
 <!-- Баннер !-->
