--- a/horny-keter.html
+++ b/horny-keter.html
@@ -12,8 +12,13 @@
   <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Projects</div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Класс SCP-объектов «Возбуждённый кетер»</h1>
-<!-- Баннер !-->
+<!-- База !-->
 
+<div class='rimg'><img src="https://i.ibb.co/6gy6Vy6/Horny-Keter.png" alt="Horny-Keter" border="0" width="100%"><span>Маркировка класса «Возбуждённый кетер»</span></div>
+<p></p>
+
+<div class='quote'>Правило коробки: Если положить объект в коробку, убрать её подальше, и будет множество жертв сексуального насилия и / или масштабные оргии, то это, должно быть, "Возбуждённый кетер".</div>
+<!-- Конец базы !-->
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство:</strong> PRINCE
 <hr>
 <div style="text-align: center;">
