warning-horny-keter!

--- a/horny-keter.html
+++ b/horny-keter.html
@@ -15,9 +15,13 @@
 <!-- База !-->
 
 <div class='rimg'><img src="https://i.ibb.co/6gy6Vy6/Horny-Keter.png" alt="Horny-Keter" border="0" width="100%"><span>Маркировка класса «Возбуждённый кетер»</span></div>
-<p></p>
+<p>Класс “Возбуждённый кетер” является подкатегорией класса “Кетер” и присваивается тем объектам, которые представляют аномально-сексуальную опасность уровня Кетер. Подобные объекты либо агрессивно навязывают жертве половой акт, или заставляют жертву совокупиться с ними. Почти всегда объекты этого класса одушевлены, реже разумны, но все они имеют репродуктивные органы или их аналоги без возможности размножения.</p>
 
-<div class='quote'>Правило коробки: Если положить объект в коробку, убрать её подальше, и будет множество жертв сексуального насилия и / или масштабные оргии, то это, должно быть, "Возбуждённый кетер".</div>
+<p>Объекты класса “Возбуждённый кетер” - являются смертельно опасными для человека, так в абсолютном большинстве случаев сексуальный контакт с объектом приводит к смерти. Лишь спец-тренированные и сильные духом индивиды способны пережить контакт с объектом.</p>
+
+<p>До сих пор, Фонду так и не удалось найти значимого применения для объектов данного класса (за исключением удовлетворения сексуальных фантазий части сотрудников).</p>
+
+<div class='quote'><strong>Правило коробки:</strong> Если положить объект в коробку, убрать её подальше, и будет множество жертв сексуального насилия и / или масштабные оргии, то это, должно быть, "Возбуждённый кетер".</div>
 <!-- Конец базы !-->
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство:</strong> PRINCE
 <hr>
