--- a/horny-keter.html
+++ b/horny-keter.html
@@ -15,7 +15,7 @@
 <!-- База !-->
 
 <div class='rimg'><img src="https://i.ibb.co/6gy6Vy6/Horny-Keter.png" alt="Horny-Keter" border="0" width="100%"><span>Маркировка класса «Возбуждённый кетер»</span></div>
-<p>Класс “Возбуждённый кетер” является подкатегорией класса “Кетер” и присваивается тем объектам, которые представляют аномально-сексуальную опасность уровня Кетер. Подобные объекты либо агрессивно навязывают жертве половой акт, или заставляют жертву совокупиться с ними. Почти всегда объекты этого класса одушевлены, реже разумны, но все они имеют репродуктивные органы или их аналоги без возможности размножения.</p>
+<p>Класс “Возбуждённый кетер” является подкатегорией класса “Кетер” (следуя из этого, многое сказанное про Кетер, применимо и здесь), и присваивается тем объектам, которые представляют аномально-сексуальную опасность уровня Кетер. Подобные объекты либо агрессивно навязывают жертве половой акт, либо заставляют жертву совокупиться с ними путём подчинения. Почти всегда объекты этого класса одушевлены, реже разумны, но все они имеют репродуктивные органы или их аналоги без возможности размножения.</p>
 
 <p>Объекты класса “Возбуждённый кетер” - являются смертельно опасными для человека, так в абсолютном большинстве случаев сексуальный контакт с объектом приводит к смерти. Лишь спец-тренированные и сильные духом индивиды способны пережить контакт с объектом.</p>
 
@@ -23,7 +23,7 @@
 
 <div class='quote'><strong>Правило коробки:</strong> Если положить объект в коробку, убрать её подальше, и будет множество жертв сексуального насилия и / или масштабные оргии, то это, должно быть, "Возбуждённый кетер".</div>
 <!-- Конец базы !-->
-<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство:</strong> PRINCE
+<p style='font-size:70%; text-align:right;'><strong>Иллюстрация:</strong> Alexandr Hell<br><strong>Текст:</strong> PRINCE
 <hr>
 <div style="text-align: center;">
 <p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый"</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
