--- a/code-pink.html
+++ b/code-pink.html
@@ -9,16 +9,9 @@
 <html>
 <body>
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Projects</div></div>
+  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Код "Розовый"</h1>
-<div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
-<p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
-
-<p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
-
-<p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница").</p>
-<hr>
 <p>Равномерный стук в иллюминатор вертолёта крупных каплей дождя почти сводил с ума, но к нему можно привыкнуть. Отряд из семи бойцов включая командира, молча сидел на своих местах и каждый, смотря в пустоту, думал о чём-то своём. В комплексе, куда направлялся данный вертолёт, примерно 10 минут назад автоматической системой безопасности был отправлен сигнал тревоги, больше информации от комплекса не было, ни запросов, ни отчётов, ни докладов службы безопасности… ничего. У бойцов было скверное настроение, они летят в неизвестность, их задача зайти в комплекс и выяснить, что там произошло, зная специфику объектов поставленных на содержание в фонде, ситуация могла развиться самым непредсказуемым образом. Капитан решил подбодрить своих бойцов и воскликнул, пытаясь перекричать гул вертолёта: "А чо это мы такие грустные? Надеюсь, вы хорошо поужинали бойцы! Потому что завтракать мы будем в АДУ! Ха-ха-ха-ха."</p>
 
 <p>Отряд одновременно и монотонным голосом ответил: "Есть сэр, да сэр!", - Того требовала субординация, но у каждого было тайное желание врезать по этой наглой морде, с такими шутками далеко не уедешь.</p>
