--- a/horny-keter.html
+++ b/horny-keter.html
@@ -9,7 +9,7 @@
 <html>
 <body>
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Projects</div></div>
+  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Класс SCP-объектов «Возбуждённый кетер»</h1>
 <!-- База !-->
