--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -9,7 +9,7 @@
 <html>
 <body>
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Projects</div></div>
+  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>SCP-939-S-EX - Со множеством голосов, и не только...</h1>
 <!-- Баннер !-->
@@ -41,7 +41,7 @@
 <!-- раздел !-->
 <p><strong>Класс риска:</strong> Угроза</p>
 <!-- раздел !-->
-<p><strong>Особые условия содержания:</strong></p>
+<p><strong>Особые условия содержания:</strong> </p>
 <!-- раздел !-->
 <p><strong>Описание:</strong> Особь SCP-939-S-EX – теплокровный разумный хищник, некоторые органы и системы которого атрофированы. Кожа SCP-939-S-EX хорошо пропускает влагу, красная. Средний рост особи SCP-939-S-EX, прямо стоящей на задних конечностях – +- 2,2 метра, а вес примерно – 250 кг, хотя от этой величины могут быть значительные отклонения. На каждой из четырёх конечностей имеется по четыре снабжённых когтем пальца, напротив которых расположен большой палец. Конечности покрыты щетинками, что весьма положительно влияет на способность SCP-939-S-EX к лазанию. Головы вытянутые, глаз или глазниц нет, мозгового черепа нет. Челюсти SCP-939-S-EX снабжены заострёнными зубами, которые тускло светятся красным. Строение челюстей и зубов похоже на таковое у хаулиодовых, зубы достигают шести сантиметров в длину. На внешней стороне челюстей расположены терморецепторные ямки. Иглы на спине данной особи меньше чем у остальных представителей и достигают 12 сантиметров в длину и, похоже, чувствительны к движению потоков воздуха и атмосферному давлению. Внешним строением своего тела особь походит на женщину в возрасте 25-30 лет: стройные ноги, крупные бёдра, овальные упругие ягодицы. Тело не худое, но жилистое, кое-где просматриваются крепкие мышцы. В районе груди расположены 2 крупных мешка с амнезиаком, внешне очень напоминают женскую грудь, репродуктивный орган внешне аналогичен женскому. Амнезиак особь выпускает следующим образом: останавливается на месте, выпрямляется в полный рост, начинает сначала медленно и аккуратно массировать мешки, потом сила нажатия увеличивается и в какой-то момент резко сжимает их, при этом особь запрокидывает свою голову и издаёт очень странный звук, напоминающий стон <span style='color: black;background: black;'>("Аххххххххх")</span>; амнезиак выходит со специфическим звуком из отверстий внешне напоминающие женские соски.</p>
 <!-- все !-->
