--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -12,14 +12,14 @@
   <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Хаб "NSFW"</h1>
-<h2 style='text-align: center'>Sex Curious Project - Отдел Узнавания Секса<h2>
+<h2 style='text-align: center'>Sex Curious Project - Отдел Узнавания Секса</h2>
 <div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
 <p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
 
 <p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
 <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница").</p>
-<h3>Представленные SCP объекты:<h3>
+<h3>Представленные SCP объекты:</h3>
 <a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
 
 <h3>Сборник рассказов хаба:</h3>
