--- a/scp-939-s-ex.html
+++ b/scp-939-s-ex.html
@@ -41,15 +41,33 @@
 <!-- раздел !-->
 <p><strong>Класс риска:</strong> Угроза</p>
 <!-- раздел !-->
-<p><strong>Особые условия содержания:</strong> </p>
+<p><strong>Особые условия содержания:</strong> Особь содержится в криокапсуле 69-K, имеющей размер 3x3x3 метра, и находятся в Участке Временного Содержания 19F. Ячейка снабжена системой климат-контроля; внутри поддерживается пониженное давление. Стены ячеек железобетонные. Доступ осуществляется посредством дезактивационной камеры, внутренняя дверь которой сделана из стали и герметична. Смотровые окна изготовлены из слоёного, пуленепробиваемого стекла толщиной - 15 см. Относительная влажность внутри ячеек составляет 100%, температура: -16°C. Наблюдение за особью осуществляется посредством камер, работающих в инфракрасном диапазоне. Наблюдателем должен быть приставлен сотрудник службы безопасности во избежании попытки совершения НУС. Для доступа к SCP-939-S-EX, ячейкам содержания а также комнатам наблюдения –  требуется разрешение сотрудника с 4 уровнем допуска или письменное разрешение куратора и медицинская справка.</p>
+<p>Капсулу содержания следует проверять с периодичностью одного раза в неделю. Во время проверки SCP-939-S-EX переводятся в резервную капсулу. В это время дверь и окна капсулы следует осмотреть на предмет повреждений, при необходимости – починить или заменить.</p>
+<p>При работе с SCP-939-S-EX требуется тщательная обработка особи успокоительным; аналогичная обработка требуется для персонала, участвующего в работе с особью – вне зависимости от вида работы. К этому относится и перевод особей из капсулы в капсулу.</p>
 <!-- раздел !-->
 <p><strong>Описание:</strong> Особь SCP-939-S-EX – теплокровный разумный хищник, некоторые органы и системы которого атрофированы. Кожа SCP-939-S-EX хорошо пропускает влагу, красная. Средний рост особи SCP-939-S-EX, прямо стоящей на задних конечностях – +- 2,2 метра, а вес примерно – 250 кг, хотя от этой величины могут быть значительные отклонения. На каждой из четырёх конечностей имеется по четыре снабжённых когтем пальца, напротив которых расположен большой палец. Конечности покрыты щетинками, что весьма положительно влияет на способность SCP-939-S-EX к лазанию. Головы вытянутые, глаз или глазниц нет, мозгового черепа нет. Челюсти SCP-939-S-EX снабжены заострёнными зубами, которые тускло светятся красным. Строение челюстей и зубов похоже на таковое у хаулиодовых, зубы достигают шести сантиметров в длину. На внешней стороне челюстей расположены терморецепторные ямки. Иглы на спине данной особи меньше чем у остальных представителей и достигают 12 сантиметров в длину и, похоже, чувствительны к движению потоков воздуха и атмосферному давлению. Внешним строением своего тела особь походит на женщину в возрасте 25-30 лет: стройные ноги, крупные бёдра, овальные упругие ягодицы. Тело не худое, но жилистое, кое-где просматриваются крепкие мышцы. В районе груди расположены 2 крупных мешка с амнезиаком, внешне очень напоминают женскую грудь, репродуктивный орган внешне аналогичен женскому. Амнезиак особь выпускает следующим образом: останавливается на месте, выпрямляется в полный рост, начинает сначала медленно и аккуратно массировать мешки, потом сила нажатия увеличивается и в какой-то момент резко сжимает их, при этом особь запрокидывает свою голову и издаёт очень странный звук, напоминающий стон <span style='color: black;background: black;'>("Аххххххххх")</span>; амнезиак выходит со специфическим звуком из отверстий внешне напоминающие женские соски.</p>
-<!-- все !-->
+<!-- Раздел !-->
+<h3>Мероприятия по ВУС.</h3>
+<button class="button-0" onclick="return toggleMe('para1')">[НЕОХОДИМ 4 УД / MTF-SPEC / 3 КУР. УД]</button>
+  <div class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
+<p style='color:crimson;'> [ДОСТУП ПОДТВЕРЖДЕН]</p>
+
+<p>Для восстановления условий содержания требуется боец из мобильной оперативной группы Фи-69. Оперативниками МОГ Эпсилон-11 должно быть подготовлено место проведения мероприятий по ВУС, а именно герметичное помещение со звукоизоляцией. Это может быть шлюз к другому объекту или отдельное помещение в комплексе. По прибытии к помещению, боец Фи-69 обычно разряжает персональное оружие (до прибытия на место оперативник вооружён, как и все бойцы для собственной безопасности), снимает все снаряжение и остаётся в лёгкой одежде. Боец должен быть сыт и иметь 2 л. питьевой воды, а также быть в хорошей психологической, физической и сексуальной форме. После чего бойцу Фи-69 необходимо зайти в помещение, установить звуковой излучатель (аналогичный при ВУС SCP-939-F), подключить индивидуальную гарнитуру, и после получения подтверждения (команда “работаем”) оперативнику необходимо начать издавать привлекающие звуки (сексуально привлекательные звуки и фразы, стоны и т.д). В скором времени особь должна направиться к источнику звука. Процедура проходит одинаково в 99% случаев: оперативники Эпсилон-11 в противогазах с фильтрами 3-го класса ждут когда особь подойдёт ко входу в камеру, присядет и начнёт целиться - это излюбленный метод нападения данной особи. Как только особь совершит прыжок на оперативника Фи-69, и будут аудиально подтверждены звуки <span style="color: black;background: black;">[ }|{ Ё C T |{ 0 G 0  S 3 |{ S 4 ]</span> <span style='font-style: italic;'>разрывания одежды</span>, оперативникам Эпсилон-11 необходимо доложить об успешном захвате (команда "рыбка заглотила червячка") и немедленно закрыть герметичную дверь. Данная комната - с момента закрытия двери - объявляется запретной. Стандартное время ожидания перед открытием ~ 48 часов (время может значительно отличаться, если потребности особи будут удовлетворены ранее, и она будет готова к транспортировке). После проведения мероприятий по ВУС, оперативники Эпсилон-11 должны зайти в камеру в противогазах с фильтрами 3-го класса, забрать ослабленную особь, предварительно одев на неё ограничители для гуманоидов, и осуществить транспортировку в камеру содержания. При необходимости оказывается помощь оперативнику Фи-69 (часто бывает, что они не могут стоять на ногах после процедуры ВУС).</p></div>
+<!-- ножки ух !-->
+
+
+
+
+
+
+
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell<br><strong>Соавторство:</strong> PRINCE
 <hr>
-<div style="text-align: center;">
-<p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый"</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
-
+<div style="text-align: center;font-size:80%; font-weight: bolder;">
+<p>« <a href='/nsfw-hub'>Главная</a> | SCP-939-S-EX</p></div>
+<!-- скрипт епта !-->
+<script src="scp-939-s-ex.js"></script>
+<!-- важная хуета !-->
 </div>
 </body>
 </html>
