--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -13,7 +13,7 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Хаб "NSFW"</h1>
 
-<div style='width: 150xp;margin: 1em auto;'><img src="https://i.ibb.co/yytQ8Yr/SCP-SAD.png" alt="SCP-SAD" border="0" width="100%"></div>
+<div style='width: 250px;margin: 1em auto;'><img src="https://i.ibb.co/yytQ8Yr/SCP-SAD.png" alt="SCP-SAD" border="0" width="100%"></div>
 
 <h2 style='text-align: center'>Sex Curious Project - Отдел Узнавания Секса</h2>
 
