--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -16,20 +16,30 @@
 <div style='width: 250px;margin: 1em auto;'><img src="https://i.ibb.co/yytQ8Yr/SCP-SAD.png" alt="SCP-SAD" border="0" width="100%"></div>
 
 <h2 style='text-align: center'>Sex Curious Project - Отдел Узнавания Секса</h2>
+<!-- Code !-->
+<button class="button-0" onclick="return toggleMe('para1')">+ Код "Розовый" (описание)</button>
+  <div class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
 
 <div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
 <p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
 
 <p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
-<p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница").</p>
+<p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
+<!-- scp !-->
 <h3>Представленные SCP объекты:</h3>
 <a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
 
 <h3>Сборник рассказов хаба:</h3>
   <a href='/code-pink'>Код "Розовый"</a><br>
   <a href="/tough-duty">Нелегкий труд</a>
-
+<!-- Благодарности !-->
+<div class='thanks'>
+  <h3>Особые благодарности:</h3>
+  <p>SAYLON, kolers, gleb080706, YJJX.</p>
+</div>
+<!-- Important !-->
+<script src="scp-939-s-ex.js"></script>
 </div>
 </body>
 </html>
