--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -16,6 +16,8 @@
 <div style='width: 250px;margin: 1em auto;'><img src="https://i.ibb.co/yytQ8Yr/SCP-SAD.png" alt="SCP-SAD" border="0" width="100%"></div>
 
 <h2 style='text-align: center'>Sex Curious Project - Отдел Узнавания Секса</h2>
+<h3>Что ещё за отдел?</h3>
+<p>Специальный отдел научной службы Фонда для содействия в изучении и содержании аномалий, обладающих эротическими и/или сексульными свойсвами и характеристиками. Отдел относительно молод, был основан в 2021 году доктором Черкасовым по приказу главы Российского филиала Фонда. Отдел является специфическим для региона СНГ, и пока что не распространяется за пределы региона. Именно поэтому, многие аномалии сексуального характера, которые ранее уничтожались или содержались в других филиалах не перешли под юрисдикцию отдела. Отделу был выделен сравнительно небольшой бюджет, рота бойцов для основания собственной МОГ (в буд. <a href='/mtf-fi-69'>МОГ Фи-69 “Виагра”</a>), и право размещать свои отделения в учреждениях Проекта “FC”.</p>
 <!-- Code !-->
 <button class="button-0" onclick="return toggleMe('para1')">+ Код "Розовый" (описание)</button>
   <div class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
@@ -36,7 +38,7 @@
 <!-- Благодарности !-->
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
-  <p>SAYLON, kolers, gleb080706, YJJX.</p>
+  <p><div style=''><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"><div>SAYLON, kolers, gleb080706, YJJX.</p>
 </div>
 <!-- Important !-->
 <script src="scp-939-s-ex.js"></script>
