--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -38,7 +38,14 @@
 <!-- Благодарности !-->
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
-  <p><div style=''><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"><div>SAYLON, kolers, gleb080706, YJJX.</p>
+  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>SAYLON</div>
+
+  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>kolers</div>
+
+  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>gleb080706</div>
+  
+  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>YJJX</div>
+
 </div>
 <!-- Important !-->
 <script src="scp-939-s-ex.js"></script>
