--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -38,13 +38,13 @@
 <!-- Благодарности !-->
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
-  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>SAYLON</div>
+  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div><h4>SAYLON</h4><p>За изобритательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
 
-  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>kolers</div>
+  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width=’100%’></div><h4>kolers</h4><p>За помощь в написании и редактировании, за потраченные средства на найм художника, за вклад в общее дело.</p></div>
 
-  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>gleb080706</div>
+  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/CnXkRvG/gleb080706.png" width=’100%’ alt="gleb080706" border="0"></div><h4>gleb080706</h4><p>За творческую деятельность и креатив. За вклад в общее дело.</p></div>
   
-  <div class='special-thanks'><div style='border-radius: 100px;border: transparent 1px solid;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>YJJX</div>
+  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/Rg3tmTX/yjjx.png" alt="yjjx" border="0" width=’100%’></div><h4>YJJX</h4><p>Не смотря на все возможные последствия, не побоялся! За вклад в общее дело.</p></div>
 
 </div>
 <!-- Important !-->
