--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -39,19 +39,19 @@
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
 
-  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>
     <div><h4>SAYLON</h4><p>За изобритательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
   </div>
 
-  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width='100%'></div>
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width='100%'></div>
    <div><h4>kolers</h4><p>За помощь в написании и редактировании, за потраченные средства на найм художника, за вклад в общее дело.</p></div>
   </div>
 
-  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/CnXkRvG/gleb080706.png" width='100%' alt="gleb080706" border="0"></div>
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/CnXkRvG/gleb080706.png" width='100%' alt="gleb080706" border="0"></div>
    <div><h4>gleb080706</h4><p>За творческую деятельность и креатив. За вклад в общее дело.</p></div>
   </div>
   
-  <div class='special-thanks'><div style='width: 8em;margin: 0em 1em 1em 0em;'><img src="https://i.ibb.co/Rg3tmTX/yjjx.png" alt="yjjx" border="0" width='100%'></div>
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/Rg3tmTX/yjjx.png" alt="yjjx" border="0" width='100%'></div>
    <div><h4>YJJX</h4><p>Не смотря на все возможные последствия, не побоялся! За вклад в общее дело.</p></div>
   </div>
 
