--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -19,15 +19,16 @@
 <h3>Что ещё за отдел?</h3>
 <p>Специальный отдел научной службы Фонда для содействия в изучении и содержании аномалий, обладающих эротическими и/или сексульными свойсвами и характеристиками. Отдел относительно молод, был основан в 2021 году доктором Черкасовым по приказу главы Российского филиала Фонда. Отдел является специфическим для региона СНГ, и пока что не распространяется за пределы региона. Именно поэтому, многие аномалии сексуального характера, которые ранее уничтожались или содержались в других филиалах не перешли под юрисдикцию отдела. Отделу был выделен сравнительно небольшой бюджет, рота бойцов для основания собственной МОГ (в буд. <a href='/mtf-fi-69'>МОГ Фи-69 “Виагра”</a>), и право размещать свои отделения в учреждениях Проекта “FC”.</p>
 <!-- Code !-->
-<button class="button-0" onclick="return toggleMe('para1')">+ Код "Розовый" (описание)</button>
-  <div class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
+<div class="cool"><button class="button-0" onclick="return toggleMe('para1')">+ Код "Розовый" (описание)</button>
+  <div style='display: none;' class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
 
-<div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
-<p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
+  <div class='code'><div class='pink'>P</div><h3>КОД: РОЗОВЫЙ</h3></div>
+  <p><strong>Описание:</strong> Обозначает опасность, исходящую от аномалий, обладающих эротическими / сексуальными свойствами, для восстановления условий содержания которых необходимо принимать соответсвующие меры сексуального противодействия.</p>
 
-<p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
+  <p><strong>Особые указания:</strong> Персоналу и охране следует любой ценой избегать взаимодействия с аномалией(-ями), во избежание перетраха и фатального исхода контакта. Оставайтесь в безопасном месте и следуйте указаниям администрации учреждения / штаба O4. Ожидайте прибытия высококвалифицированных оперативников.</p>
 
-<p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
+  <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
+</div>
 <!-- scp !-->
 <h3>Представленные SCP объекты:</h3>
 <a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
@@ -35,6 +36,10 @@
 <h3>Сборник рассказов хаба:</h3>
   <a href='/code-pink'>Код "Розовый"</a><br>
   <a href="/tough-duty">Нелегкий труд</a>
+
+<h3>И что всё это значит?</h3>
+<p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, он должен быть написан грамотно и вписываться в концепцию секс-фонда).</p>
+
 <!-- Благодарности !-->
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
