--- a/horny-keter.html
+++ b/horny-keter.html
@@ -25,8 +25,8 @@
 <!-- Конец базы !-->
 <p style='font-size:70%; text-align:right;'><strong>Иллюстрация:</strong> Alexandr Hell<br><strong>Текст:</strong> PRINCE
 <hr>
-<div style="text-align: center;">
-<p><span style="font-size:80%; font-weight: bolder;">« <a href='/code-pink'>Код "Розовый"</a> |  SCP-939-S-EX | <a href=''>Нелегкий труд</a> »</span></p></div>
+<div style="text-align: center;font-size:80%; font-weight: bolder;">
+<p>« <a href='/scp-939-s-ex'>SCP-939-S-EX</a> | Возбуждённый кетер</p></div>
 
 </div>
 </body>
