--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -4,24 +4,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
-  <title>Код "Розовый"</title>
+  <title>Снаряжение бойцов МОГ</title>
 </head>
 <html>
 <body>
 <div class='header'>
   <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
-<div style='max-width: 850px;margin: auto;'><h1>Стандартное снаряжение бойцов МОГ</h1>
+<div style='max-width: 850px;margin: auto;'><h1>Снаряжение бойцов МОГ</h1>
 <!-- Основа так сказать база -->
 <div style="width: 200px;margin: 1em auto;"><img src="https://i.ibb.co/6trJbgG/Fi-69.png" width='100%' alt="Fi-69" border="0"></div>
 
 <h2 style='text-align: center;'>МОГ Фи-69 ("Виагра")</h2>
-Мобильная оперативная группа Фи-69 "Виагра"
-Миссия оперативной группы: 
+<p><strong>Мобильная оперативная группа Фи-69 "Виагра"</p>
+<p>Миссия оперативной группы:</strong> Миссия оперативной группы: Мобильная оперативная группа Фи-69 работает под юрисдикцией ОУС (ДСА) и используется для постановления на содержание или восстановления условий содержания аномалий представляющих сексуальную угрозу. Штат бойцов также подготовлен для встречи с ГУС розового типа.</p>
+<h3>Снаряжение</h3>
+<div class="document">
+  <p>Докладная записка начальнику Службы безопасности ████████ ████████████.<br>
+  Копия выслана начальнику Службы логистики █████ ███████████.</p>
 
-Снаряжение:
+  <p>По запросу куратора Зоны 7 Дмитрия █████, позывной "Особист", составлен список вооружения и экипировки, для обновления арсенала оперативников мобильных оперативных групп, действующих на территории стран, ранее входивших в состав СССР. Применение приведенных ниже средств, облегчает маскировку МОГ под местные полицейские силы специального назначения, а также обеспечивает высокую эффективность боевой работы. Все перечисленные образцы являются базовыми моделями, которые модифицируются под задачи конкретного подразделения. К примеру шлемы для ОСН дополнительно оснащаются средствами мем/псизащиты, подробный лист модификаций оружия и снаряжения содержится в документе EML-020-2015.</p>
+</div>
 
-Отчёты об операциях:
+<p><strong>Отчёты об операциях:</strong> </p>
 <!-- Энд база -->
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
